sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:4: error: ';' expected but '=' found.
  long:Int=getNombreValeurs
          ^