sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var ecart:Int=getNombreValeurs()/2;
  long:Int=getNombreValeurs
  while (ecart>0){
   	var a:Int=0;
    var v:Int = 0;
    for (i<- 1 to long -1) {
      v=getValeur(i);
      var j:Int=i;
      while (j-ecart> -1 && !plusPetitQue(j-ecart,v)) {
        copie(j-ecart,j);
        j=j-ecart
      }
    setValeur(j,v)
    }
    ecart=ecart/2;
  }
    }
 